<resources>
    <string name="app_name">AppLockUI</string>

    <!-- Login Fragment -->
    <string name="login_activity_email_edit_hint">E-Mail Address...</string>
    <string name="login_activity_password_edit_hint">Password...</string>
    <string name="login_activity_signUp">Don\'t have account? Signup</string>
    <string name="login_activity_signIn">signin</string>
    <string name="login_activity_forgot_password">Forgot password?</string>
    <string name="appInfo">Lock your apps, hide your media files and earn credits to redeem cash!</string>


    <!-- SignupFragment-->
    <string name="signUp_fragment_firstName">First Name...</string>
    <string name="signUp_fragment_lastName">Last Name...</string>
    <string name="signUp_fragment_gender">Gender...</string>
    <string name="signUp_fragment_signup">Signup</string>
    <string name="signUp_fragment_dob">Date Of Birth...</string>
    <string name="signUp_fragment_confirm_Password">Confirm Password...</string>
    <string name="signUp_appInfo">Lock your apps, hide your media files and earn credits to redeem cash. Signup now !</string>

    <!-- SecurityFragment -->
    <string name="security_fragment_info">Answer any security question below. This will help us to verify your identity during password recovery</string>
    <string name="security_fragment_select_question">Select Question</string>
    <string name="security_fragment_select_answer">Your Answer</string>

    <!-- ForgotPasswordFragment -->
    <string name="forgot_fragment_password_text">Forgot Password ?</string>
    <string name="forgot_fragment_password_reset_text">Recover Password</string>
    <string name="forgot_fragment_password_reset_info">Enter your registered E-Mail address and answer the security question to recover password</string>
    <string name="forgot_fragment_password_reset_processed">You will receive a notification message. Click on the notification to Reset password</string>

    <!-- ResetPasswordFragment -->
    <string name="reset_fragment_reset_text">Reset Password</string>
    <string name="reset_fragment_password_reset_info">Enter new password for</string>

    <!-- PreferenceFragment -->
    <string name="preference_fragment_general_settings_title">GENERAL SETTINGS</string>
    <string name="preference_fragment_change_password_title">CHANGE PASSWORD</string>
    <string name="preference_fragment_vault_settings_title">VAULT SETTINGS</string>
    <string name="preference_fragment_user_settings_title">USER SETTINGS</string>
    <string name="preference_fragment_activate_locker_title">Activate App Lock</string>
    <string name="preference_fragment_activate_locker_summery">Activate or deactivate app locker</string>
    <string name="preference_fragment_vibrate_title">Vibrate</string>
    <string name="preference_fragment_vibrate_summery">Vibrate when entering pin</string>
    <string name="preference_fragment_uninstall_prevention_title">Lock Installer</string>
    <string name="preference_fragment_uninstall_prevention_summery">Lock package installer from uninstalling apps</string>
    <string name="preference_fragment_lock_settings_title">Lock Settings</string>
    <string name="preference_fragment_lock_settings_summery">Lock settings from erasing app data</string>
    <string name="preference_fragment_change_user_pin_title">Change Pin</string>
    <string name="preference_fragment_change_user_pin_summery">Change your app lock pin</string>
    <string name="preference_fragment_change_user_password_title">Change Password</string>
    <string name="preference_fragment_change_user_password_summery">Change your account password</string>
    <string name="preference_fragment_change_vault_title">Change Vault Location</string>
    <string name="preference_fragment_change_user_image_title">Change Profile Picture</string>
    <string name="preference_fragment_change_security_question_title">Reset Security Question</string>
    <string name="preference_fragment_logout_user_account_title">Logout</string>

    <!-- UserProfileFragment-->
    <string name="user_profile_fragment_email_icon_description">E-Mail</string>
    <string name="user_profile_fragment_points_earned_text">Points Earned</string>
    <string name="user_profile_fragment_points_earned_today_text">Today</string>
    <string name="user_profile_fragment_points_earned_total_text">Total</string>
    <string name="user_profile_fragment_dob_title_text">Date Of Birth</string>
    <string name="user_profile_fragment_gender_title_text">Gender</string>
    <string name="user_profile_fragment_points_text">Points</string>
    <string name="user_profile_fragment_password_title_text">Password</string>
    <string name="user_profile_fragment_password_change_text">Change Password</string>
    <string name="user_profile_fragment_redeem_cash_info_text">Minimum of 400 points is required to redeem cash</string>
    <string name="user_profile_fragment_redeem_cash_text">Redeem Cash</string>

    <!-- RedeemCashFragment -->
    <string name="user_profile_redeem_fragment_points_earned_text1">You have earned</string>
    <string name="user_profile_redeem_fragment_points_earned_text2">Points !</string>
    <string name="user_profile_redeem_fragment_enter_details_text">Enter your Paypal Id and verify your password to redeem cash</string>

    <!-- FaqQuestionFragment -->
    <string name="faq_question_fragment_question_1_text">How to reset password ?</string>
    <string name="faq_question_fragment_question_2_text">How to lock apps ?</string>
    <string name="faq_question_fragment_question_3_text">How to redeem points into cash ?</string>
    <string name="faq_question_fragment_question_4_text">When will I receive my cash ?</string>
    <string name="faq_question_fragment_question_5_text">What is the minimum threshold to redeem cash ?</string>
    <string name="faq_question_fragment_question_6_text">How to reset vault password ?</string>
    <string name="faq_question_fragment_question_7_text">How to change vault location ?</string>
    <string name="faq_question_fragment_question_8_text">How can I save my media files into vault ?</string>

    <!-- MainScreenActivity -->
    <string name="main_screen_activity_lock_button_text">App Lock</string>
    <string name="main_screen_activity_vault_button_text">Vault</string>
    <string name="main_screen_activity_settings_button_text">Settings</string>
    <string name="main_screen_activity_user_profile_button_text">My Profile</string>
    <string name="main_screen_activity_faq_button_text">FAQ</string>

    <!-- Set Pattern Screen -->
    <string name="set_pattern_fragment_title_text">Set Pattern</string>
    <string name="set_pattern_fragment_info_text">Connect minimum of 4 dots</string>
    <string name="set_pattern_fragment_change_lock_text">Change to PIN lock</string>
    <string name="set_pattern_fragment_confirm_text">Confirm Pattern</string>
    <string name="set_pattern_fragment_not_equal_text">Pattern did not match</string>
    <string name="set_pattern_fragment_reset_text">RESET</string>


    <!-- Set Pin Screen -->
    <string name="set_pin_fragment_title_text">Set PIN</string>
    <string name="set_pin_fragment_info_text">Select 4 digits as PIN</string>
    <string name="set_pin_fragment_change_lock_text">Change to Pattern lock</string>
    <string name="set_pin_fragment_confirm_text">Confirm PIN</string>
    <string name="set_pin_fragment_not_equal_text">PIN did not match</string>

    <!-- App Lock Activity -->
    <string name="appLock_activity_title">AppLock</string>
    <string name="appLock_activity_additional_settings_header">RECOMMENDED</string>
    <string name="appLock_activity_checked_apps_header">LOCKED</string>
    <string name="appLock_activity_installed_apps_header">INSTALLED</string>
    <string name="appLock_activity_installed_apps_empty">NO NEW APPS INSTALLED</string>
    <string name="appLock_activity_checked_apps_empty">NO NEW APPS LOCKED</string>
    <string name="appLock_activity_usage_dialog_message">
        In Android Lollipop(5.0) and above you must permit usage access for LockUp to use the app lock function
    </string>
    <string name="appLock_activity_usage_dialog_permit_text">PERMIT</string>
    <string name="appLock_activity_usage_dialog_cancel_text">CANCEL</string>


    <string-array name="recommended_app_list">
        <item>Lock Notifications</item>
        <item>Lock App Installer</item>
        <item>Prevent LockUp Uninstall</item>
    </string-array>


</resources>
